# dissertation_code

./: .gitignore  README.md  READMEALL.md  README_visualization.md  analyze_low_battery_results.py  analyze_results.py  create_three_tier_comparison_chart.py  pyproject.toml  requirements.txt  venv_cleanup.ps1
.claude/: settings.local.json
configs/: baseline.yaml  force_cloud.yaml  force_edge.yaml  force_local.yaml  high_battery_local_edge_test.yaml  local_heavy_test.yaml  low_battery_cloud_test.yaml  sweep_edge_latency.yaml  sweep_latency.yaml  sweep_low_battery.yaml  sweep_task_types.yaml  sweep_three_tier_comparison.yaml  sweep_tradeoff_validation.yaml  sweep_workload.yaml  sweep_workload_stability.yaml
configs/experiments/: example.yaml
docs/: VALIDATION_REPORT_GUIDE.md
examples/: battery_energy_demo.py  policy_demo.py  runner_demo.py  simpy_demo.py  task_generation_demo.py
extracted_results/sweeps/: sweep_detailed.json
notebooks/: analysis_template.ipynb
results/20250829_174217/: per_task_results.csv
scripts/: run_baseline.ps1  run_baseline.sh  run_low_battery_test.ps1  run_low_battery_test.sh
src/battery_offloading/: cli.py  (+10 more)
tests/: selfcheck_config.py  selfcheck_nodes.py  test_battery.py  test_battery_comprehensive.py  test_battery_energy.py  test_config.py  test_energy_comprehensive.py  test_generator.py  test_network.py  test_nodes.py  test_policies_baselines.py  test_policy.py  test_policy_battery.py  test_policy_comprehensive.py  test_sanity.py  test_sim_components.py  test_task_generator.py  test_types.py
tools/: validate_thesis_claims.py
(+263 files in other folders)
